# fictional-waffle-tisdy

./: .gitignore
Lab1/: .gitignore  CMakeLists.txt  RunTests.c  Task.md  main.c
Lab1/src/: Types.c  graphics.c  input.c  input.h  mathing.c  mathing.h  output.c  output.h  types.h
Lab1/src/IO/: IO.h  graphics.h  input.c  input.h  output.c  output.h
Lab1/src/IO/Validation/: StringUtils.c  StringUtils.h  Validation 2.c  Validation 2.h  Validation.c  Validation.h
Lab1/src/Validation/: StringUtils.c  StringUtils.h  Validation.c  Validation.h
Lab1/src/utils/: StringUtils.h  validation.c  validation.h
Lab1/test/: InputTests.c  InputTests.h  MathingTest.c  MathingTest.h  Tests.h
Lab1/test/utils/: ValidationTests.c  ValidationTests.h
Lab2/: CMakeLists.txt  TimeStats.txt
Lab2/src/: main.c
Lab2/src/c/: Car.c  KeyTable.c  Service.c  Sorting.c  Table.c  utils.c
Lab2/src/c/IO/: input.c  output.c
Lab2/src/include/: Car.h  KeyTable.h  Service.h  Sorting.h  Table.h
Lab2/src/include/IO/: CarPrompts.h  input.h  output.h
Lab2/src/include/common/: ExitCodes.h  Macros.h
Lab3/: CMakeLists.txt
Lab3/src/: main.c
Lab3/src/c/: Arrays.c  FileManager.c  FileManager.h  In.c  Input.c  Meth.c  Meth.h  Output.c  Service.c  Stats.c
Lab3/src/c/objects/: Matrix.c  Vector.c
Lab3/src/c/simple/: PrimitiveInput.c
Lab3/src/include/: Arrays.h  Codes.h  FileManager.h  In.h  Input.h  Meth.h  Output.h  Service.h  Stats.h
Lab3/src/include/objects/: Matrix.h  Vector.h
Lab3/src/include/simple/: PrimitiveInput.h
Lab3/testing/: ArraysTests.c  Dump.c  RealMatrixTests.c  Unit.c
Lab4/: CMakeLists.txt
Lab4/src/: main.c
Lab4/src/c/: Experiments.c  IO.c  Service.c
Lab4/src/c/objects/: ListStack.c  Stack.c
Lab4/src/c/primitives/: Array.c  List.c  PrimitiveInput.c
Lab4/src/include/: Codes.h  Experiments.h  IO.h  Service.h
Lab4/src/include/objects/: ListStack.h  Stack.h
Lab4/src/include/primitives/: Array.h  List.h  PrimitiveInput.h  StackElement.h
Lab5/: CMakeLists.txt
Lab5/src/: main.c
Lab5/src/c/: ArrayQueue.c  ListQueue.c  Measure.c  QueueElement.c  Service.c
Lab5/src/include/: ArrayQueue.h  ExitCodes.h  ListQueue.h  Measure.h  QueueElement.h  Service.h
Lab6/: CMakeLists.txt
Lab6/src/: main.c
Lab6/src/Etc/: Shuffle.c  Shuffle.h
Lab6/src/c/: AddRemoveTimings.c  BinTree.c  File.c  PrimitiveInput.c  Statistics.c  TreeOperationService.c  TreeServiceFunctions.c
Lab6/src/c/BinTree/: BinRemove.c  BinTraverse.c  BinTree.c
Lab6/src/include/: BinTree.h  File.h  PrimitiveInput.h  Statistics.h  TreeOperationService.h
Lab7/: CMakeLists.txt  IterCounters.c  IterCounters.h  Numbers  main.c  test_main.c
Lab7/BinTree/: BinTree.h  BinTreeEtc.h  BinTreeIO.h
Lab7/BinTree/src/: BinAdd.c  BinRemove.c  BinTraverse.c  BinTree.c  BinTreeRotators.c  BinTreeRotators.h
Lab7/HashMap/: Common.h  HashMap.h  HashMapPrivate.h  HashMapPublic.h
Lab7/HashMap/List/: List.c  List.h
Lab7/HashMap/src/: HashMapPrivate.c  HashMapPublic.c
Lab7/Services/: Common.c  Common.h  HashService.c  HashService.h  StatsService.c  StatsService.h  TreeService.c  TreeService.h
Lab7/src/: File.c  File.h
Lab7/src/etc/: Shuffle.c
Lab8/: CMakeLists.txt  CoolGraph  CoolPath  Country.graph  Lab8  NoPath.graph  Small.graph  main.c
Lab8/src/: Graph.c  Graph.h  Task.c  Task.h
